# utilx

./: .env.local  .gitignore  .nuxtignore  APPLICATION_CONFIGURATION_GUIDE.md  BLOG_FINAL_STATUS.md  BLOG_UPDATE_NOTES.md  DEVELOPMENT_OPTIMIZATION.md  NUXT4_UPGRADE_GUIDE.md  NUXT_UPGRADE_GUIDE.md  PAPERMOD_THEME_GUIDE.md  README.en.md  README.md  README_PACKAGING.md  nuxt.config-dev.txt  nuxt.config.dev.ts  nuxt.config.security.js  nuxt.config.simple.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  ran.md  spine.md  tailwind.config.js  update-server-package.json
.claude/: settings.local.json
blog/: extract-related-tools.py  fix-yaml-simple.sh  fix-yaml.py  hugo.toml  hugo_stats.json  migrate-articles.py
cfg/: nuxt.config.minimal.ts  nuxt.config.v4.ts
docs/: APPLICATION_CONFIGURATION_GUIDE.md  BLOG_GUIDE.md  BLOG_RELATED_TOOLS.md  BLOG_THEME_GUIDE.md  PAPERMOD_THEME_GUIDE.md  blog-validation-checklist.md  blog-writing-guide.md
openspec/: AGENTS.md  project.md
public/: EXTERNAL_LINK_README.md  SPINE_SETUP.md  browserconfig.xml  external-link-test.html  manifest.json  robots.txt  sitemap.xml  spine-test.html  sw.js  test-fullscreen.html  test-spine.html
scripts/: blog-build-fix-summary.md  blog-summary.sh  (+21 more)
src-tauri/: Cargo.toml  build.rs  entitlements.plist  index.html  splash-config.json  splash.html  tauri.conf.json  update-config.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_commands.rs  config_init.rs  lib.rs  main.rs  menu_handler.rs  update_commands.rs  update_config.rs  updater.rs
(+1888 files in other folders)
