[package]
name = "utilx"
version = "1.0.0"
description = "有条工具 - 开发者效率工具箱"
authors = ["util.cn"]
edition = "2021"

[lib]
name = "utilx_lib"
crate-type = ["cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
vergen = { version = "8", features = ["build", "git", "gitcl", "rustc"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
